# mnist_docker_sample_EN

./: .env  .gitignore  Docker_Mnist_Setup.md  Docker_Setup.md  Dockerfile  Dockerfile_additional_package  MNIST_pytorch.ipynb  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  generate_env.sh
.ipynb_checkpoints/: MNIST_pytorch-checkpoint.ipynb
markdown/: DevContainers.md  Docker_Setup.md  Poetry.md  Remote_SSH.md
tensorflow/: Dockerfile  pyproject.toml
