[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
numpy = "1.26.4"
pillow = "10.3.0"
jupyterlab = "^4.1.8"
pandas = "^2.2.2"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"
tensorflow = "^2.16.1"
tensorrt = "^10.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pyproject-flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,W503"
